[package]
name = "TBV-Rust-SDK-2"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
description = "Rust SDK for the TBV appilcation and CLI"
license = "MIT"
repository = "https://github.com/KeeganBeuthin/TBV-Rust-SDK.git"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]